<resources>
    <string name="app_name">Matt Driver</string>
    <string name="title_activity_maps">Map</string>
    <string name="please_check_on_your_internet_connection">Please check your internet connection</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="back_online">Back online!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Continue">Continue</string>
    <string name="welcome">Welcome</string>
    <string name="you_can_choose_if_you_prefer_a_light_or_dark_mode">You can choose if you prefer a light or dark mode</string>
    <string name="turn_on_dark_mode">Turn on dark mode</string>
    <string name="turn_off_dark_mode">Turn off dark mode</string>
    <string name="View">View</string>
    <string name="you_need_to_join_an_organisation_to_pick_a_route_to_work_with">You need to join an organisation to pick a route to work with</string>
    <string name="join_organisation">Join Organisation.</string>
    <string name="say_something">Say something!</string>
    <string name="that_didnt_work">That didn\'t work!</string>
    <string name="you_can_create_and_edit_new_routes_and_add_new_drivers_from_here">You can create and edit new routes and add new drivers from here.</string>
    <string name="done">Done</string>
    <string name="set_location">Set location</string>
    <string name="create_route">Draw route</string>
    <string name="add_a_stop">Add stop</string>
    <string name="edit_stop">Edit stop</string>
    <string name="channel_name">location_channel</string>
    <string name="stop">stop</string>
    <string name="name">name</string>
    <string name="finish">Finish</string>
    <string name="your_number_s_9_digits">712345678</string>
    <string name="email">email</string>
    <string name="be_sure_not_to_forget_these">"Don't forget these details "</string>
    <string name="password">password</string>
    <string name="confirm_that_password">confirm that password</string>
    <string name="perfect">perfect</string>
    <string name="almost">almost</string>
    <string name="we_need_a_password">please add this</string>
    <string name="confirm_your_password">confirm your password</string>

    <string name="we_need_your_email">We need your email.</string>
    <string name="thats_not_your_email">That\'s not an email address.</string>
    <string name="we_need_your_actual_email_address">We need your actual email address.</string>
    <string name="thats_not_a_real_email_adress">That\'s not a real email address</string>
    <string name="we_need_your_actual_email_address_please">We need your actual email address please</string>
    <string name="at_least_6_characters">Please create a password containing at least 8 characters</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="use_strong_password">Please, use a strong password!</string>
    <string name="type_something">Type something</string>
    <string name="suuper_weak">Suuper weak</string>
    <string name="still_very_weak">Still very weak</string>
    <string name="better">Better…</string>
    <string name="at_least_two_more">At least 2 more</string>
    <string name="a_bit_more">A bit more…</string>
    <string name="thats_good">Thats good.</string>
    <string name="very_weak">Very weak</string>
    <string name="wow">Perfect!</string>
    <string name="please_fill_this">please fill this</string>
    <string name="sign_up_instead">Sign up instead</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="more">More</string>

</resources>