<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.SignIn">

    <RelativeLayout
        android:id="@+id/money"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="2dp"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/create_layout"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="17sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:text="@string/finish" />


                <ImageView
                    android:layout_width="21dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:translationY="1dp"
                    android:src="@drawable/next_arrow"
                    android:layout_height="18dp"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="Sign in." />

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="15sp"
                android:layout_height="wrap_content"
                android:text="Just fill in these then click continue to finish" />


            <EditText
                android:id="@+id/emailEditText"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/text_color"
                android:paddingBottom="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/email" />


            <EditText
                android:id="@+id/passwordEditText"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textSize="16sp"
                android:textColorHint="@color/hint_color"
                android:textColor="@color/text_color"
                android:paddingRight="20dp"
                android:paddingBottom="15dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/sign_up_instead"
                    android:layout_width="wrap_content"
                    android:textSize="17sp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_instead" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>